--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "C:\\Users\\scofield\\Anaconda3\\python.exe",
+    "python.pythonPath": "/home/scofield/anaconda3/bin/python",
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
     "files.exclude":{
@@ -10,5 +10,7 @@
         "**/.DS_Store": true,
         "**/*.pyc": {"when": "$(basename).py"}, 
         "**/__pycache__": true
-    }
+    },
+    "terminal.integrated.fontSize": 13,
+    "editor.fontSize": 13
 }
