--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "**/CVS": true,
         "**/.DS_Store": true,
         "**/*.pyc": {"when": "$(basename).py"}, 
-        "**/__pycache__": true
+        "**/__pycache__": true,
+        "**/.ipynb_checkpoints": true
     }
 }
